[gd_scene load_steps=5 format=3 uid="uid://be2v3ilfl06oq"]

[ext_resource type="Texture2D" uid="uid://b6lqgaok77a5u" path="res://pictures/cursor.png" id="1_cfom6"]
[ext_resource type="Script" uid="uid://c1jqlps5w20id" path="res://general_scripts/player_ui.gd" id="1_ehg4m"]
[ext_resource type="PackedScene" uid="uid://xm26eacg42ei" path="res://ui/pause_menu.tscn" id="2_vq5xy"]
[ext_resource type="PackedScene" uid="uid://d15gpx4vdn5tq" path="res://ui/task_ui.tscn" id="4_iwa1g"]

[node name="PlayerUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehg4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterCursorContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CursorTexture" type="TextureRect" parent="CanvasLayer/CenterCursorContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_cfom6")

[node name="PauseMenu" parent="." instance=ExtResource("2_vq5xy")]

[node name="TaskUi" parent="." instance=ExtResource("4_iwa1g")]

[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/QuitGame" to="." method="_on_quit_game_pressed"]

[editable path="PauseMenu"]
